removed client entity
