# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/accounts": {
             "post": {
-                "description": "Create a new account for a client",
+                "description": "Create a new account",
                 "consumes": [
                     "application/json"
                 ],
@@ -38,13 +38,6 @@
                     },
                     "400": {
                         "description": "Invalid request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "404": {
-                        "description": "Client not found",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
@@ -189,13 +182,9 @@
         "v1.createAccountRequest": {
             "type": "object",
             "required": [
-                "client_id",
                 "id"
             ],
             "properties": {
-                "client_id": {
-                    "type": "string"
-                },
                 "id": {
                     "type": "string"
                 }
@@ -205,6 +194,7 @@
             "type": "object",
             "required": [
                 "account_id",
+                "amount",
                 "id",
                 "type"
             ],
